--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
       <section id="intro">
         <p class="lead">
           <!-- TODO: Kurzer einleitender Absatz aus deiner Datei (2–4 Sätze). -->
-          Unsere Kampagne setzt sich dafür ein, dass Solar-Direktstrom in Deutschland klaren Vorrang vor Erdgas-Strom erhält – rechtlich wie praktisch.
+          Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Tech-no¬logieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber ein¬sei¬tig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
+Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belas-ten, den Wirt¬schafts¬standort Deutschland schwächen, die Abhängigkeit von fos¬si¬len Impor¬ten aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
+Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“.
+
         </p>
         <div class="callout">
           <!-- TODO: 1 Kernaussage oder Zahl hervorheben -->
@@ -187,4 +190,5 @@
   </script>
 </body>
 </html>
+
 
