--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
 
       <!-- Ziele / Forderungen -->
       <section id="ziele">
-        <h2>Ziele der Kampagne</h2>
+        <h2>Kernforderungen</h2>
         <div class="grid2">
           <div class="card">
             <h3><!-- TODO: Ziel 1 Titel -->Klare Priorität für Solar-Direktstrom</h3>
@@ -190,5 +190,6 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
   </script>
 </body>
 </html>
+
 
 
