--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
         <h2>Kernforderungen</h2>
         <div class="grid2">
           <div class="card">
-            <h3><!-- TODO: Ziel 1 Titel -->Klare Priorität für Solar-Direktstrom</h3>
-            <p><!-- TODO: Ziel 1 Text -->Gesetzliche Verankerung von Vorrangregeln und Abbau bürokratischer Hürden.</p>
+            <h3><!-- TODO: Ziel 1 Titel -->Keine neuen Erdgaskraftwerke</h3>
+            <p><!-- TODO: Ziel 1 Text -->Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken</p>
           </div>
           <div class="card">
             <h3><!-- TODO: Ziel 2 Titel -->Netz- & Marktdesign reformieren</h3>
@@ -190,6 +190,7 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
   </script>
 </body>
 </html>
+
 
 
 
