--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
             <p><!-- TODO: Ziel 1 Text -->Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 2 Titel -->Netz- & Marktdesign reformieren</h3>
-            <p><!-- TODO: Ziel 2 Text -->Flexibilität belohnen, Eigenverbrauch & Direktnutzung vereinfachen.</p>
+            <h3><!-- TODO: Ziel 2 Titel -->Ausbau Erneuerbarer beschleunigen</h3>
+            <p><!-- TODO: Ziel 2 Text -->und netzdienliche Erzeugung belohnen</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 3 Titel -->Prosumer & Kommunen stärken</h3>
-            <p><!-- TODO: Ziel 3 Text -->Beteiligungsmodelle, Sharing & kommunale Projekte erleichtern.</p>
+            <h3><!-- TODO: Ziel 3 Titel -->Feste Einspeisevergütung beibehalten</h3>
+            <p><!-- TODO: Ziel 3 Text -->bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 4 Titel -->Mittelstand entlasten</h3>
-            <p><!-- TODO: Ziel 4 Text -->Planbare Regeln, fairer Netzzugang, weniger Fixkosten.</p>
+            <h3><!-- TODO: Ziel 4 Titel -->Bestandsschutz</h3>
+            <p><!-- TODO: Ziel 4 Text -->und keine Zusatzbelastung für erneuerbare Stromerzeugung</p>
           </div>
         </div>
       </section>
@@ -190,6 +190,7 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
   </script>
 </body>
 </html>
+
 
 
 
