--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <section id="intro">
         <p class="lead">
           <!-- TODO: Kurzer einleitender Absatz aus deiner Datei (2–4 Sätze). -->
-          Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Tech-no¬logieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber ein¬sei¬tig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
-Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belas-ten, den Wirt¬schafts¬standort Deutschland schwächen, die Abhängigkeit von fos¬si¬len Impor¬ten aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
+          Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Technologieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber einseitig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
+Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belasten, den Wirtschaftsstandort Deutschland schwächen, die Abhängigkeit von fossilen Importen aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
 Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“.
 
         </p>
@@ -91,26 +91,26 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
         <h2>Kernforderungen</h2>
         <div class="grid2">
           <div class="card">
-            <h3><!-- TODO: Ziel 1 Titel -->Keine neuen Erdgaskraftwerke</h3>
-            <p><!-- TODO: Ziel 1 Text -->Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken</p>
+            <h3><!-- TODO: Ziel 1 Titel -->1. Keine neuen Erdgaskraftwerke</h3>
+            <p><!-- TODO: Ziel 1 Text -->Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 2 Titel -->Ausbau Erneuerbarer beschleunigen</h3>
-            <p><!-- TODO: Ziel 2 Text -->und netzdienliche Erzeugung belohnen</p>
+            <h3><!-- TODO: Ziel 2 Titel -->2. Ausbau Erneuerbarer beschleunigen</h3>
+            <p><!-- TODO: Ziel 2 Text -->und netzdienliche Erzeugung belohnen.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 3 Titel -->Feste Einspeisevergütung beibehalten</h3>
+            <h3><!-- TODO: Ziel 3 Titel -->3. Feste Einspeisevergütung beibehalten</h3>
             <p><!-- TODO: Ziel 3 Text -->bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 4 Titel -->Bestandsschutz</h3>
-            <p><!-- TODO: Ziel 4 Text -->und keine Zusatzbelastung für erneuerbare Stromerzeugung</p>
+            <h3><!-- TODO: Ziel 4 Titel -->4.Bestandsschutz</h3>
+            <p><!-- TODO: Ziel 4 Text -->und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p>
           </div>
         </div>
       </section>
 
       <!-- Hintergrund / aus Dokument -->
-      <section id="hintergrund">
+     <section id="hintergrund">
         <h2>Hintergrund & Argumente</h2>
         <p>
           <!-- TODO: 1–3 Absätze aus deiner Datei übernehmen. -->
@@ -126,14 +126,12 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
 
       <!-- Materialien / Downloads -->
       <section id="material">
-        <h2>Materialien & Downloads</h2>
-        <p>Hier finden Sie zentrale Dokumente zur Kampagne – zum Nachlesen und Weitergeben.</p>
+        <h2>Materialien</h2>
+        <p>Hier finden Sie die Begründung für unsere Forderungen – zum Nachlesen und Weitergeben.</p>
         <div class="downloads">
           <!-- TODO: PDF/Dateien verlinken (Dateien in /assets/ ablegen) -->
-          <a class="cta secondary" href="assets/DEIN-DOKUMENT.pdf" download>📄 Kampagnenpapier (PDF)</a>
           <a class="cta secondary" href="assets/Positionspapier.pdf" download>📄 Positionspapier</a>
-          <a class="cta secondary" href="assets/Faktenblatt.pdf" download>📄 Faktenblatt</a>
-        </div>
+          </div>
       </section>
 
       <!-- Mitmachen / CTA zur Briefaktion -->
@@ -190,6 +188,7 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
   </script>
 </body>
 </html>
+
 
 
 
