--- a/index.html
+++ b/index.html
@@ -74,14 +74,11 @@
       <!-- Einleitung / aus der hochgeladenen Datei -->
       <section id="intro">
         <p class="lead">
-          <!-- TODO: Kurzer einleitender Absatz aus deiner Datei (2–4 Sätze). -->
           Wirtschaftsministerin Reiche und Bundeskanzler Friedrich Merz sprechen von Technologieoffenheit und Wirtschaftlichkeit. Mit ihren konkreten Forderungen werden aber einseitig fossile Kraftwerke begünstigt und der Ausbau günstiger Erneuerbaren gebremst. 
-Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belasten, den Wirtschaftsstandort Deutschland schwächen, die Abhängigkeit von fossilen Importen aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
-Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“.
-
+          Weniger Ausbau bedeutet: Bürger und Unternehmen mit höheren Stromkosten belasten, den Wirtschaftsstandort Deutschland schwächen, die Abhängigkeit von fossilen Importen aus unzuverlässigen Staaten verlängern und das Klimaziel gefährden.
+          Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: <em>„Für uns ist klar: Energie muss bezahlbar, sicher und sauber sein“</em>.
         </p>
         <div class="callout">
-          <!-- TODO: 1 Kernaussage oder Zahl hervorheben -->
           <strong>Kernaussage:</strong> Solarstrom senkt Kosten, erhöht Versorgungssicherheit und schützt Klima & Gesundheit.
         </div>
       </section>
@@ -91,36 +88,33 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
         <h2>Kernforderungen</h2>
         <div class="grid2">
           <div class="card">
-            <h3><!-- TODO: Ziel 1 Titel -->1. Keine neuen Erdgaskraftwerke</h3>
-            <p><!-- TODO: Ziel 1 Text -->Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p>
+            <h3>1. Keine neuen Erdgaskraftwerke</h3>
+            <p>Spitzenlast mit Bioenergie, Wasserkraft und Speichern abdecken.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 2 Titel -->2. Ausbau Erneuerbarer beschleunigen</h3>
-            <p><!-- TODO: Ziel 2 Text -->und netzdienliche Erzeugung belohnen.</p>
+            <h3>2. Ausbau Erneuerbarer beschleunigen</h3>
+            <p>und netzdienliche Erzeugung belohnen.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 3 Titel -->3. Feste Einspeisevergütung beibehalten</h3>
-            <p><!-- TODO: Ziel 3 Text -->bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
+            <h3>3. Feste Einspeisevergütung beibehalten</h3>
+            <p>bis Smart Meter flächendeckend eine einfache, flexible Vergütung erlauben.</p>
           </div>
           <div class="card">
-            <h3><!-- TODO: Ziel 4 Titel -->4.Bestandsschutz</h3>
-            <p><!-- TODO: Ziel 4 Text -->und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p>
+            <h3>4. Bestandsschutz</h3>
+            <p>und keine Zusatzbelastung für erneuerbare Stromerzeugung.</p>
           </div>
         </div>
       </section>
 
       <!-- Hintergrund / aus Dokument -->
-     <section id="hintergrund">
+      <section id="hintergrund">
         <h2>Hintergrund & Argumente</h2>
-        <p>
-          <!-- TODO: 1–3 Absätze aus deiner Datei übernehmen. -->
-          <!-- Tipp: Verwende Zwischenüberschriften <h3> für Lesbarkeit. -->
-        </p>
-        <h3><!-- TODO: Subheadline -->Kosten, Klima & Sicherheit</h3>
+        <p></p>
+        <h3>Kosten, Klima & Sicherheit</h3>
         <ul>
-          <li><!-- TODO: Bullet 1 -->Solarstrom senkt Stromgestehungskosten und Risiken fossiler Preise.</li>
-          <li><!-- TODO: Bullet 2 -->Direktnutzung reduziert Netzbelastung und Verluste.</li>
-          <li><!-- TODO: Bullet 3 -->Dezentrale Anlagen erhöhen die Resilienz.</li>
+          <li>Solarstrom senkt Stromgestehungskosten und Risiken fossiler Preise.</li>
+          <li>Direktnutzung reduziert Netzbelastung und Verluste.</li>
+          <li>Dezentrale Anlagen erhöhen die Resilienz.</li>
         </ul>
       </section>
 
@@ -129,9 +123,8 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
         <h2>Materialien</h2>
         <p>Hier finden Sie die Begründung für unsere Forderungen – zum Nachlesen und Weitergeben.</p>
         <div class="downloads">
-          <!-- TODO: PDF/Dateien verlinken (Dateien in /assets/ ablegen) -->
           <a class="cta secondary" href="assets/Positionspapier.pdf" download>📄 Positionspapier</a>
-          </div>
+        </div>
       </section>
 
       <!-- Mitmachen / CTA zur Briefaktion -->
@@ -144,20 +137,19 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
               Schreiben Sie Ihren Brief – wir übernehmen Ausdruck und Postversand an die zuständige Bundestagsabgeordnete/den zuständigen Abgeordneten.
             </p>
             <a class="cta primary" href="index-full.html">Brief einreichen</a>
-            <!-- Falls diese Seite die neue Startseite wird: den Anker anpassen -->
           </div>
-          </div>
+        </div>
       </section>
 
-      <!-- FAQ (optional aus Dokument) -->
+      <!-- FAQ -->
       <section id="faq">
         <h2>FAQ</h2>
         <details>
-          <summary><!-- TODO -->Warum Vorrang für Solar-Direktstrom?</summary>
-          <p><!-- TODO: Kurzantwort aus Datei -->Weil er Kosten senkt, Netze entlastet und schnell ausbaubar ist.</p>
+          <summary>Warum Vorrang für Solar-Direktstrom?</summary>
+          <p>Weil er Kosten senkt, Netze entlastet und schnell ausbaubar ist.</p>
         </details>
         <details>
-          <summary><!-- TODO -->Wie funktioniert der Postversand?</summary>
+          <summary>Wie funktioniert der Postversand?</summary>
           <p>Sie reichen Ihren Brief online ein; wir drucken, kuvertieren und versenden physisch. Details in der Datenschutzerklärung.</p>
         </details>
       </section>
@@ -183,6 +175,8 @@ Weniger Ausbau steht zudem im Gegensatz zum Wahlprogramm 2025 der Union: "Für u
   </script>
 </body>
 </html>
+
+
 
 
 
