--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -168,102 +168,157 @@ Mit freundlichen Grüßen
 
   <!-- MdB-Lookup & Live-Platzhalter -->
   <script>
-  (function () {
-    const $ = (s) => document.querySelector(s);
-    const elPLZ = $('#plz'), elCity = $('#city'), elMP = $('#abgeordneter'), elMSG = $('#message');
-    const selWrap = $('#mpSelectWrap'), elSel = $('#mp_select'), elHint = $('#mp_hint');
+(function () {
+  const $ = (s) => document.querySelector(s);
+  const elPLZ = $('#plz'), elCity = $('#city'), elMP = $('#abgeordneter'), elMSG = $('#message');
+  const selWrap = $('#mpSelectWrap'), elSel = $('#mp_select'), elHint = $('#mp_hint');
 
-    const clean = (s) => String(s||'').replace(/^\s*nan\s+/i,'').trim();
-    const norm = (t) => String(t||'').normalize('NFD').replace(/[\\u0300-\\u036f]/g,'').replace(/[^\w\\s]/g,'').replace(/\\s+/g,' ').trim().toLowerCase();
+  const clean = (s) => String(s||'').replace(/^\s*nan\s+/i,'').trim();
+  const norm = (t) => String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
 
-    async function loadJson(url){ const r=await fetch(url,{cache:'no-store'}); if(!r.ok) throw new Error(url); return r.json(); }
+  async function loadJson(url){ const r=await fetch(url,{cache:'no-store'}); if(!r.ok) throw new Error(url); return r.json(); }
 
-    async function findCandidates(plz, cityRaw) {
-      const [plzMap, wkMap, ortMap] = await Promise.all([
-        loadJson('assets/data/plz_to_wk.json'),
-        loadJson('assets/data/wk_to_mdb.json'),
-        loadJson('assets/data/ort_to_wk.json'),
-      ]);
+  async function findCandidates(plz, cityRaw) {
+    const [plzMap, wkMap, ortMap] = await Promise.all([
+      loadJson('assets/data/plz_to_wk.json'),
+      loadJson('assets/data/wk_to_mdb.json'),
+      loadJson('assets/data/ort_to_wk.json'),
+    ]);
 
-      let wks = plzMap[plz] || [];
-      const cityKey = norm(cityRaw);
+    let wks = plzMap[plz] || [];
+    const cityKey = norm(cityRaw);
 
-      if ((!wks || !wks.length) && cityKey) {
-        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-        wks = [...new Set(hits.flat())];
-      }
+    // Fallback: nur Ort
+    if ((!wks || !wks.length) && cityKey) {
+      const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
+      wks = [...new Set(hits.flat())];
+    }
 
-      if (wks.length > 1 && cityKey) {
-        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-        const byCity = new Set([].concat(...hits));
-        const narrowed = wks.filter(w => byCity.has(String(w)));
-        if (narrowed.length) wks = narrowed;
-      }
+    // Eingrenzen mit Ort, wenn mehrere WK
+    if (wks.length > 1 && cityKey) {
+      const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
+      const byCity = new Set([].concat(...hits));
+      const narrowed = wks.filter(w => byCity.has(String(w)));
+      if (narrowed.length) wks = narrowed;
+    }
 
-      const candidates = (wks||[])
-        .map(wk => wkMap[String(wk)])
-        .filter(Boolean)
-        .map(m => ({
-          wk: String((m.wk_nr || m.wk || '')),
-          name: clean(m.mdb_name),
+    // Kandidaten bauen (nach Name deduplizieren, falls mehrere WK auf dieselbe Person zeigen)
+    const byName = new Map();
+    for (const wk of (wks||[])) {
+      const m = wkMap[String(wk)];
+      if (!m) continue;
+      const name = clean(m.mdb_name);
+      if (!name) continue;
+      if (!byName.has(name)) {
+        byName.set(name, {
+          wk: String(m.wk_nr || m.wk || ''),
+          name,
           party: clean(m.fraktion || m.party || ''),
-          anrede: clean(m.anrede) || ('Sehr geehrte/r ' + clean(m.mdb_name)),
-          address: (m.bundestag_address || 'Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin').replace(/\\s*\\n\\s*/g,'\\n').trim()
-        }));
-
-      return { wks: [...new Set((wks||[]).map(String))], candidates };
+          anrede: clean(m.anrede) || ('Sehr geehrte/r ' + name),
+          address: (m.bundestag_address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin')
+                     .replace(/\s*\n\s*/g,'\n').trim()
+        });
+      }
     }
+    return { wks: [...new Set((wks||[]).map(String))], candidates: [...byName.values()] };
+  }
 
-    function ensureIntroOnBase(anrede, addr, name) {
-      const base = elMSG.dataset.base || elMSG.value || '';
-      const addrLine = (addr || 'Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin').replace(/\\s*\\n\\s*/g,'\\n').trim();
-      const addrBlock = ((name ? name : '') + '\\n' + addrLine).trim();
-      const tpl = base
-        .replace('{MdB_Name_und_Adresse}', addrBlock)
-        .replace('{MdB_Adresse}', addrBlock)
-        .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
-      elMSG.dataset.tpl = tpl;
-      ['#sender_zip','#sender_city'].forEach(sel => document.querySelector(sel)?.dispatchEvent(new Event('input')));
-    }
+  function ensureIntroOnBase(anrede, addr, name) {
+    const base = elMSG.dataset.base || elMSG.value || '';
+    const addrLine = (addr || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
+    const addrBlock = ((name ? name : '') + '\n' + addrLine).trim();
+    const tpl = base
+      .replace('{MdB_Name_und_Adresse}', addrBlock)
+      .replace('{MdB_Adresse}', addrBlock)
+      .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
+    elMSG.dataset.tpl = tpl;
+    ['#sender_zip','#sender_city'].forEach(sel => document.querySelector(sel)?.dispatchEvent(new Event('input')));
+  }
 
-    function hideSelect(){ selWrap.style.display='none'; elSel.innerHTML=''; elHint.textContent=''; }
-    function showSelect(cands, wks){
-      elSel.innerHTML='';
-      const opt0=document.createElement('option'); opt0.value=''; opt0.textContent='Bitte Abgeordnete:n auswählen …'; elSel.appendChild(opt0);
-      cands.forEach(c=>{ const o=document.createElement('option'); o.value=c.name; o.textContent=c.name+(c.party?' – '+c.party:''); o.dataset.anrede=c.anrede; o.dataset.address=c.address; elSel.appendChild(o); });
-      elHint.textContent='Mehrere Wahlkreise (' + wks.join(', ') + ').'; selWrap.style.display='block';
-    }
-    function chooseByName(name){
-      if(!name) return;
-      const opt=[...elSel.options].find(o=>o.value===name);
-      const anrede = opt?.dataset?.anrede || ('Sehr geehrte/r '+name);
-      const address= opt?.dataset?.address|| 'Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin';
-      elMP.value=name; ensureIntroOnBase(anrede,address,name);
-    }
-    elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
-    elMP.addEventListener('blur',()=>{ const n=(elMP.value||'').trim(); if(n) chooseByName(n); });
+  function hideSelect(){
+    selWrap.style.display='none';
+    elSel.innerHTML='';
+    elHint.textContent='';
+  }
+  function showSelect(cands, wks){
+    elSel.innerHTML='';
+    const opt0=document.createElement('option');
+    opt0.value=''; opt0.textContent='Bitte Abgeordnete:n auswählen …';
+    elSel.appendChild(opt0);
+    cands.forEach(c=>{
+      const o=document.createElement('option');
+      o.value=c.name;
+      o.textContent=c.name + (c.party ? ' – ' + c.party : '');
+      o.dataset.anrede=c.anrede;
+      o.dataset.address=c.address;
+      elSel.appendChild(o);
+    });
+    elHint.textContent = (wks.length>1)
+      ? 'Mehrere Wahlkreise: ' + wks.join(', ')
+      : 'Mehrere Treffer im Ort.';
+    selWrap.style.display='block';
+  }
+  function chooseByName(name){
+    if(!name) return;
+    const opt=[...elSel.options].find(o=>o.value===name);
+    const anrede = opt?.dataset?.anrede || ('Sehr geehrte/r '+name);
+    const address= opt?.dataset?.address|| 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin';
+    elMP.value=name;
+    ensureIntroOnBase(anrede,address,name);
+  }
+  elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
+  elMP.addEventListener('blur',()=>{ const n=(elMP.value||'').trim(); if(n) chooseByName(n); });
 
-    let t=null; function scheduleLookup(ms=350){ clearTimeout(t); t=setTimeout(runLookup,ms); }
-    if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
+  // Debounce & Trigger
+  let t=null; function scheduleLookup(ms=300){ clearTimeout(t); t=setTimeout(runLookup,ms); }
+  if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
 
-    elPLZ.addEventListener('input',()=>{ const v=(elPLZ.value||'').trim(); if(/^\\d{5}$/.test(v)) scheduleLookup(0); });
-    elCity.addEventListener('input',()=>{ const v=(elCity.value||'').trim(); if(v.length>=3) scheduleLookup(350); });
-    ['change','blur'].forEach(ev=>{ elPLZ.addEventListener(ev,runLookup); elCity.addEventListener(ev,runLookup); });
+  // PLZ: nach 5 Ziffern sofort
+  elPLZ.addEventListener('input',()=>{ const v=(elPLZ.value||'').trim(); if(/^\d{5}$/.test(v)) scheduleLookup(0); });
+  // Ort: ab 2 Zeichen
+  elCity.addEventListener('input',()=>{ const v=(elCity.value||'').trim(); if(v.length>=2) scheduleLookup(300); });
+  ['change','blur'].forEach(ev=>{ elPLZ.addEventListener(ev,runLookup); elCity.addEventListener(ev,runLookup); });
 
-    async function runLookup(){
+  async function runLookup(){
+    hideSelect();
+    const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
+    if(!/^\d{5}$/.test(plz)) return;
+
+    try{
+      const { wks, candidates } = await findCandidates(plz, city);
+
+      // 1) Mehrere WK ODER mehrere Kandidaten → Auswahl anzeigen
+      if ((wks && wks.length > 1) || (candidates && candidates.length > 1)) {
+        elMP.value = '';
+        ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+        showSelect(candidates, wks);
+        return;
+      }
+
+      // 2) Exakt ein Kandidat → automatisch setzen
+      if (candidates.length === 1) {
+        const c = candidates[0];
+        elMP.value = c.name;
+        ensureIntroOnBase(c.anrede, c.address, c.name);
+        hideSelect();
+        return;
+      }
+
+      // 3) Nichts gefunden → Fallback
+      elMP.value = '';
+      ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
       hideSelect();
-      const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
-      if(!/^\\d{5}$/.test(plz)) return;
-      try{
-        const { wks, candidates } = await findCandidates(plz, city);
-        if(candidates.length===1){ const c=candidates[0]; elMP.value=c.name; ensureIntroOnBase(c.anrede,c.address,c.name); }
-        else if(candidates.length>1){ elMP.value=''; ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin',''); showSelect(candidates,wks); }
-        else { elMP.value=''; ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin',''); }
-      }catch(e){ elMP.value=''; ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\\nPlatz der Republik 1\\n11011 Berlin',''); }
-      ['#sender_zip','#sender_city','#plz','#city'].forEach(sel=>document.querySelector(sel)?.dispatchEvent(new Event('input')));
+    }catch(e){
+      elMP.value = '';
+      ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+      hideSelect();
     }
-  })();
-  </script>
+
+    // Tokens unten neu berechnen
+    ['#sender_zip','#sender_city','#plz','#city'].forEach(sel=>document.querySelector(sel)?.dispatchEvent(new Event('input')));
+  }
+})();
+</script>
 
   <script>
   (function(){
@@ -328,6 +383,7 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
 
 
 
