--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <h2>Materialien</h2>
         <p>Hier finden Sie die Begründung für unsere Forderungen – zum Nachlesen und Weitergeben.</p>
         <div class="downloads">
-          <a class="cta secondary" href="assets/Positionspapier.pdf" download>📄 Positionspapier</a>
+          <a class="cta secondary" href="Solarstrom statt Erdgasstrom - Die Argumente.pdf" download>📄 Positionspapier</a>
         </div>
       </section>
 
@@ -175,6 +175,7 @@
   </script>
 </body>
 </html>
+
 
 
 
