--- a/index-fullneu.html
+++ b/index-fullneu.html
@@ -166,186 +166,159 @@ Mit freundlichen Grüßen
     </footer>
   </div>
 
-  <!-- MdB-Lookup & Live-Platzhalter -->
+  <!-- MdB-Lookup (ohne Event-Schleifen) -->
   <script>
-(function () {
-  const $ = (s) => document.querySelector(s);
-  const elPLZ = $('#plz'), elCity = $('#city'), elMP = $('#abgeordneter'), elMSG = $('#message');
-  const selWrap = $('#mpSelectWrap'), elSel = $('#mp_select'), elHint = $('#mp_hint');
+  (function () {
+    const $ = (s) => document.querySelector(s);
+    const elPLZ  = $('#plz'), elCity = $('#city'), elMP = $('#abgeordneter'), elMSG = $('#message');
+    const selWrap = $('#mpSelectWrap'), elSel = $('#mp_select'), elHint = $('#mp_hint');
 
-  const clean = (s) => String(s||'').replace(/^\s*nan\s+/i,'').trim();
-  const norm = (t) => String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
+    const clean = (s) => String(s||'').replace(/^\s*nan\s+/i,'').trim();
+    const norm  = (t) => String(t||'').normalize('NFD').replace(/[\u0300-\u036f]/g,'').replace(/[^\w\s]/g,'').replace(/\s+/g,' ').trim().toLowerCase();
 
-  async function loadJson(url){ const r=await fetch(url,{cache:'no-store'}); if(!r.ok) throw new Error(url); return r.json(); }
+    async function loadJson(url){ const r=await fetch(url,{cache:'no-store'}); if(!r.ok) throw new Error(url); return r.json(); }
 
-  async function findCandidates(plz, cityRaw) {
-    const [plzMap, wkMap, ortMap] = await Promise.all([
-      loadJson('assets/data/plz_to_wk.json'),
-      loadJson('assets/data/wk_to_mdb.json'),
-      loadJson('assets/data/ort_to_wk.json'),
-    ]);
+    async function findCandidates(plz, cityRaw) {
+      const [plzMap, wkMap, ortMap] = await Promise.all([
+        loadJson('assets/data/plz_to_wk.json'),
+        loadJson('assets/data/wk_to_mdb.json'),
+        loadJson('assets/data/ort_to_wk.json'),
+      ]);
 
-    let wks = plzMap[plz] || [];
-    const cityKey = norm(cityRaw);
+      let wks = plzMap[plz] || [];
+      const cityKey = norm(cityRaw);
 
-    // Fallback: nur Ort
-    if ((!wks || !wks.length) && cityKey) {
-      const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-      wks = [...new Set(hits.flat())];
-    }
-
-    // Eingrenzen mit Ort, wenn mehrere WK
-    if (wks.length > 1 && cityKey) {
-      const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
-      const byCity = new Set([].concat(...hits));
-      const narrowed = wks.filter(w => byCity.has(String(w)));
-      if (narrowed.length) wks = narrowed;
-    }
-
-    // Kandidaten bauen (nach Name deduplizieren, falls mehrere WK auf dieselbe Person zeigen)
-    const byName = new Map();
-    for (const wk of (wks||[])) {
-      const m = wkMap[String(wk)];
-      if (!m) continue;
-      const name = clean(m.mdb_name);
-      if (!name) continue;
-      if (!byName.has(name)) {
-        byName.set(name, {
-          wk: String(m.wk_nr || m.wk || ''),
-          name,
-          party: clean(m.fraktion || m.party || ''),
-          anrede: clean(m.anrede) || ('Sehr geehrte/r ' + name),
-          address: (m.bundestag_address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin')
-                     .replace(/\s*\n\s*/g,'\n').trim()
-        });
+      if ((!wks || !wks.length) && cityKey) {
+        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
+        wks = [...new Set(hits.flat())];
       }
+      if (wks.length > 1 && cityKey) {
+        const hits = Object.entries(ortMap).filter(([k]) => k.startsWith(cityKey)).map(([, arr]) => arr);
+        const byCity = new Set([].concat(...hits));
+        const narrowed = wks.filter(w => byCity.has(String(w)));
+        if (narrowed.length) wks = narrowed;
+      }
+
+      const byName = new Map();
+      for (const wk of (wks||[])) {
+        const m = wkMap[String(wk)];
+        if (!m) continue;
+        const name = clean(m.mdb_name);
+        if (!name) continue;
+        if (!byName.has(name)) {
+          byName.set(name, {
+            wk: String(m.wk_nr || m.wk || ''),
+            name,
+            party: clean(m.fraktion || m.party || ''),
+            anrede: clean(m.anrede) || ('Sehr geehrte/r ' + name),
+            address: (m.bundestag_address || 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin')
+                       .replace(/\s*\n\s*/g,'\n').trim()
+          });
+        }
+      }
+      return { wks: [...new Set((wks||[]).map(String))], candidates: [...byName.values()] };
     }
-    return { wks: [...new Set((wks||[]).map(String))], candidates: [...byName.values()] };
-  }
 
-  function ensureIntroOnBase(anrede, addr, name) {
-    const base = document.querySelector('#message').dataset.base || document.querySelector('#message').value || '';
-    const msg  = document.querySelector('#message');
+    function ensureIntroOnBase(anrede, addr, name) {
+      const base = elMSG.dataset.base || elMSG.value || '';
+      const addrLine = String(addr || 'Platz der Republik 1\n11011 Berlin').replace(/\s*\n\s*/g,'\n').trim();
 
-    // Address normalisieren und "Deutscher Bundestag" einschieben
-    const addrLine = String(addr || 'Platz der Republik 1\n11011 Berlin')
-      .replace(/\s*\n\s*/g,'\n').trim();
+      const lines = [];
+      if (name) lines.push(name);
+      if (!/Deutscher Bundestag/i.test(addrLine)) lines.push('Deutscher Bundestag');
+      lines.push(...addrLine.split('\n'));
 
-    const lines = [];
-    if (name) lines.push(name);
-    if (!/Deutscher Bundestag/i.test(addrLine)) {
-      lines.push('Deutscher Bundestag');
+      const addrBlock = lines.join('\n');
+      elMSG.dataset.tpl = base
+        .replace('{MdB_Name_und_Adresse}', addrBlock)
+        .replace('{MdB_Adresse}', addrBlock)
+        .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
+
+      // WICHTIG: keine künstlichen input-Events auf #plz/#city -> sonst Lookup-Schleife!
+      // Das tatsächliche Einsetzen der Absenderdaten erledigt der Token-Block unten automatisch.
+      if (typeof window._applyTokens === 'function') window._applyTokens();
     }
-    lines.push(...addrLine.split('\n'));
-    const addrBlock = lines.join('\n');
 
-    const tpl = base
-      .replace('{MdB_Name_und_Adresse}', addrBlock)
-      .replace('{MdB_Adresse}', addrBlock)
-      .replace('{Anrede}', anrede || 'Sehr geehrte Damen und Herren');
+    function hideSelect(){ selWrap.style.display='none'; elSel.innerHTML=''; elHint.textContent=''; }
+    function showSelect(cands, wks){
+      elSel.innerHTML='';
+      const opt0=document.createElement('option');
+      opt0.value=''; opt0.textContent='Bitte Abgeordnete:n auswählen …';
+      elSel.appendChild(opt0);
+      cands.forEach(c=>{
+        const o=document.createElement('option');
+        o.value=c.name;
+        o.textContent=c.name + (c.party ? ' – ' + c.party : '');
+        o.dataset.anrede=c.anrede;
+        o.dataset.address=c.address;
+        elSel.appendChild(o);
+      });
+      elHint.textContent = (wks.length>1) ? 'Mehrere Wahlkreise: ' + wks.join(', ') : 'Mehrere Treffer im Ort.';
+      selWrap.style.display='block';
+    }
+    function chooseByName(name){
+      if(!name) return;
+      const opt=[...elSel.options].find(o=>o.value===name);
+      const anrede = opt?.dataset?.anrede || ('Sehr geehrte/r '+name);
+      const address= opt?.dataset?.address|| 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin';
+      elMP.value=name;
+      ensureIntroOnBase(anrede,address,name);
+    }
+    elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
+    elMP.addEventListener('blur',()=>{ const n=(elMP.value||'').trim(); if(n) chooseByName(n); });
 
-    msg.dataset.tpl = tpl;
+    // Debounce & Trigger — ohne künstliche Events
+    let t=null; const scheduleLookup=(ms=300)=>{ clearTimeout(t); t=setTimeout(runLookup,ms); };
+    if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
+    elPLZ.addEventListener('input',()=>{ const v=(elPLZ.value||'').trim(); if(/^\d{5}$/.test(v)) scheduleLookup(0); });
+    elCity.addEventListener('input',()=>{ const v=(elCity.value||'').trim(); if(v.length>=2) scheduleLookup(300); });
+    ['change','blur'].forEach(ev=>{ elPLZ.addEventListener(ev,runLookup); elCity.addEventListener(ev,runLookup); });
 
-    // direkt Tokens (PLZ/Ort/…) neu berechnen
-    ['#sender_zip','#sender_city','#plz','#city'].forEach(sel =>
-      document.querySelector(sel)?.dispatchEvent(new Event('input'))
-    );
-  }
+    async function runLookup(){
+      hideSelect();
+      const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
+      if(!/^\d{5}$/.test(plz)) return;
 
-  function hideSelect(){
-    selWrap.style.display='none';
-    elSel.innerHTML='';
-    elHint.textContent='';
-  }
-  function showSelect(cands, wks){
-    elSel.innerHTML='';
-    const opt0=document.createElement('option');
-    opt0.value=''; opt0.textContent='Bitte Abgeordnete:n auswählen …';
-    elSel.appendChild(opt0);
-    cands.forEach(c=>{
-      const o=document.createElement('option');
-      o.value=c.name;
-      o.textContent=c.name + (c.party ? ' – ' + c.party : '');
-      o.dataset.anrede=c.anrede;
-      o.dataset.address=c.address;
-      elSel.appendChild(o);
-    });
-    elHint.textContent = (wks.length>1)
-      ? 'Mehrere Wahlkreise: ' + wks.join(', ')
-      : 'Mehrere Treffer im Ort.';
-    selWrap.style.display='block';
-  }
-  function chooseByName(name){
-    if(!name) return;
-    const opt=[...elSel.options].find(o=>o.value===name);
-    const anrede = opt?.dataset?.anrede || ('Sehr geehrte/r '+name);
-    const address= opt?.dataset?.address|| 'Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin';
-    elMP.value=name;
-    ensureIntroOnBase(anrede,address,name);
-  }
-  elSel.addEventListener('change',()=>{ if(elSel.value) chooseByName(elSel.value); });
-  elMP.addEventListener('blur',()=>{ const n=(elMP.value||'').trim(); if(n) chooseByName(n); });
+      try{
+        const { wks, candidates } = await findCandidates(plz, city);
 
-  // Debounce & Trigger
-  let t=null; function scheduleLookup(ms=300){ clearTimeout(t); t=setTimeout(runLookup,ms); }
-  if(!elMSG.dataset.base) elMSG.dataset.base = elMSG.value;
+        if ((wks && wks.length > 1) || (candidates && candidates.length > 1)) {
+          elMP.value = '';
+          ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+          showSelect(candidates, wks);
+          return;
+        }
 
-  // PLZ: nach 5 Ziffern sofort
-  elPLZ.addEventListener('input',()=>{ const v=(elPLZ.value||'').trim(); if(/^\d{5}$/.test(v)) scheduleLookup(0); });
-  // Ort: ab 2 Zeichen
-  elCity.addEventListener('input',()=>{ const v=(elCity.value||'').trim(); if(v.length>=2) scheduleLookup(300); });
-  ['change','blur'].forEach(ev=>{ elPLZ.addEventListener(ev,runLookup); elCity.addEventListener(ev,runLookup); });
+        if (candidates.length === 1) {
+          const c = candidates[0];
+          elMP.value = c.name;
+          ensureIntroOnBase(c.anrede, c.address, c.name);
+          hideSelect();
+          return;
+        }
 
-  async function runLookup(){
-    hideSelect();
-    const plz=(elPLZ.value||'').trim(), city=(elCity.value||'').trim();
-    if(!/^\d{5}$/.test(plz)) return;
-
-    try{
-      const { wks, candidates } = await findCandidates(plz, city);
-
-      // 1) Mehrere WK ODER mehrere Kandidaten → Auswahl anzeigen
-      if ((wks && wks.length > 1) || (candidates && candidates.length > 1)) {
         elMP.value = '';
         ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-        showSelect(candidates, wks);
-        return;
-      }
-
-      // 2) Exakt ein Kandidat → automatisch setzen
-      if (candidates.length === 1) {
-        const c = candidates[0];
-        elMP.value = c.name;
-        ensureIntroOnBase(c.anrede, c.address, c.name);
         hideSelect();
-        return;
+      }catch(e){
+        elMP.value = '';
+        ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
+        hideSelect();
       }
-
-      // 3) Nichts gefunden → Fallback
-      elMP.value = '';
-      ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-      hideSelect();
-    }catch(e){
-      elMP.value = '';
-      ensureIntroOnBase('Sehr geehrte Damen und Herren','Deutscher Bundestag\nPlatz der Republik 1\n11011 Berlin','');
-      hideSelect();
     }
+  })();
+  </script>
 
-    // Tokens unten neu berechnen
-    ['#sender_zip','#sender_city','#plz','#city'].forEach(sel=>document.querySelector(sel)?.dispatchEvent(new Event('input')));
-  }
-})();
-</script>
-
+  <!-- Live-Token-Ersetzung -->
   <script>
   (function(){
     const $ = (s) => document.querySelector(s);
     const form=$('#letterForm'), msg=$('#message');
     const F={'{Vorname}':'#first_name','{Nachname}':'#last_name','{Straße}':'#street','{PLZ}':'#sender_zip','{Ort}':'#sender_city'};
-    const esc=s=>s.replace(/[.*+?^${}()|[\\]\\\\]/g,'\\\\$&');
+    const esc=s=>s.replace(/[.*+?^${}()|[\]\\]/g,'\\$&');
     const topPLZ  = () => ($('#plz')?.value||'').trim();
     const topCity = () => ($('#city')?.value||'').trim();
-    const cleanStreet = (v) => String(v||'').replace(/\\s*,\\s*(?=\\d)/g,' ').replace(/\\s{2,}/g,' ').trim();
+    const cleanStreet = (v) => String(v||'').replace(/\s*,\s*(?=\d)/g,' ').replace(/\s{2,}/g,' ').trim();
 
     function getTpl(){ return msg.dataset.tpl || msg.dataset.base || msg.value || ''; }
     function vals(){
@@ -362,7 +335,7 @@ Mit freundlichen Grüßen
     function apply(base,map){
       let out=base;
       for(const[t,v] of Object.entries(map)){ out=out.replace(new RegExp(esc(t),'g'),v); }
-      return out.replace(/\\n{3,}/g,'\\n\\n').trimEnd();
+      return out.replace(/\n{3,}/g,'\n\n').trimEnd();
     }
     function update(){
       if(!msg) return;
@@ -370,13 +343,17 @@ Mit freundlichen Grüßen
       if(!msg.dataset.tpl)  msg.dataset.tpl  = msg.dataset.base;
       msg.value = apply(getTpl(), vals());
     }
+
+    // globaler Hook, damit der Lookup nach dem Einsetzen nicht an #plz/#city „rütteln“ muss
+    window._applyTokens = update;
+
     [...Object.values(F), '#plz', '#city', '#sender_zip', '#sender_city'].forEach(sel=>$(sel)?.addEventListener('input',update));
     update();
 
     form?.addEventListener('submit', async (e) => {
       e.preventDefault();
       update();
-      if (/\\{Vorname\\}|\\{Nachname\\}|\\{Straße\\}|\\{PLZ\\}|\\{Ort\\}/.test(msg.value)) {
+      if (/\{Vorname\}|\{Nachname\}|\{Straße\}|\{PLZ\}|\{Ort\}/.test(msg.value)) {
         alert('Bitte füllen Sie alle Absenderfelder aus.'); return;
       }
       const btn = form.querySelector('button[type="submit"]');
@@ -385,9 +362,11 @@ Mit freundlichen Grüßen
       payload.copy_to_self  = fd.has('copy_to_self'); payload.consent_print = fd.has('consent_print');
       try{
         const res = await fetch(form.action, { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload) });
-        const data = await res.json();
+        // Falls der Server (z. B. durch Fehlerseite) kein JSON liefert:
+        const text = await res.text();
+        let data; try { data = JSON.parse(text); } catch { throw new Error(text.slice(0,120) || 'Serverantwort kein JSON'); }
         if (data.ok){
-          const box = $('#successMessage');
+          const box = document.getElementById('successMessage');
           box.textContent = 'Danke! Ihr Brief wurde erfolgreich eingereicht. Vorgangs-ID: ' + (data.queueId||'');
           box.style.display = 'block';
           form.reset();
@@ -400,6 +379,8 @@ Mit freundlichen Grüßen
   </script>
 </body>
 </html>
+
+
 
 
 
