--- a/Impressum.html
+++ b/Impressum.html
@@ -128,13 +128,14 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
           <br>
           <font color="#FFFFFF">M.I.B. - Werbe-, Event- und Anzeigenagentur - 
           Heisenbergstrasse 2b - 80937 M&uuml;nchen - Telefon: +49 89 311 52 00 
-          - Telefax: +49 89 311 52 22</font> </div></td>
+          - email:webmaster(at)muc-mib.de</font> </div></td>
     </tr>
   </table>
   
 </div>
 </body>
 </html>
+
 
 
 
