--- a/Impressum.html
+++ b/Impressum.html
@@ -54,7 +54,8 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
                   </font></strong></p>
               <td width="797" valign="top"> <div id="myslidemenu" class="jqueryslidemenu"> 
                 <ul>
-                  <li><a href="http://www.aktionsolarstrom.de"><font face="Century Gothic">Home</font></a></li>
+                  <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
+                 <li><a href="http://www.aktionsolarstrom.de"><font face="Century Gothic">Home</font></a></li>
                   <li><font face="Century Gothic"><br>
                     </font></li>
                 </ul></tr>
@@ -135,6 +136,7 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 </div>
 </body>
 </html>
+
 
 
 
