--- a/Impressum.html
+++ b/Impressum.html
@@ -1,141 +1,99 @@
-<html>
+<!doctype html>
+<html lang="de">
 <head>
-<title>Media International Bader</title>
-<meta http-equiv="cache-control" content="no-cache">
-<meta http-equiv="pragma" content="no-cache">
-<meta http-equiv="expires" content="-1"><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" type="text/css" href="http://www.muc-bau.de/fileadmin/jqueryslidemenu.css" />
-
-<!--[if lte IE 7]>
-<style type="text/css">
-html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
-</style>
-<![endif]-->
-
-<script type="text/javascript" src="http://www.muc-bau.de/fileadmin/jquery.min.js"></script>
-<script type="text/javascript" src="http://www.muc-bau.de/fileadmin/jqueryslidemenu.js"></script>
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Impressum – Solarstrom statt Erdgas-Strom</title>
+  <meta name="description" content="Impressum der Kampagne Solarstrom statt Erdgas-Strom (Media International Bader).">
+  <style>
+    :root{ --maxw: 920px; --brand:#0a7c5b; --ink:#111; --muted:#6b7280; }
+    html,body{margin:0;padding:0}
+    body{font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color:var(--ink); background:#fff;}
+    .page{display:grid;grid-template-columns:1fr minmax(0,var(--maxw)) 1fr; min-height:100dvh}
+    .middle{grid-column:2;padding:20px}
+    header{padding:28px 0 10px; text-align:center}
+    header a.logo{display:inline-block}
+    header img{width:min(90vw,320px); height:auto}
+    h1{margin:10px 0 8px; font-size:1.8rem}
+    h2{margin:28px 0 8px; font-size:1.2rem}
+    .card{border:1px solid #e5e7eb; border-radius:12px; padding:18px; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,.04)}
+    .muted{color:var(--muted)}
+    footer{margin:36px 0 16px; text-align:center; color:var(--muted); font-size:.95rem}
+    footer a{color:inherit; text-decoration:none}
+    footer a:hover{text-decoration:underline}
+  </style>
 </head>
-// <script type="text/javascript" language="JavaScript">
-//<!--
+<body>
+  <div class="page">
+    <header class="middle">
+      <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
+        <img src="assets/logo.png" alt="Solarstrom statt Erdgas-Strom – Logo">
+      </a>
+      <h1>Impressum</h1>
+    </header>
 
-// if(top.frames.length < 1) top.location.href="http://www.city2live.in";
+    <main class="middle">
+      <section class="card">
+        <p><strong>Media International Bader – Impressum</strong></p>
 
-// -->
-// </script>
-<style type="text/css">
- body{
-  background-image: url(http://www.muc-bau.de/gfx/Hintergrundframesunterseiten.png);   /* Adresse des Hintergrundbildes */
-  background-repeat: no-repeat;   /* Hintergrundbild ohne Wiederholung */
-  background-position: 400pt  100pt;
-  /* Erste Zahl Position von Links.  Zweite Zahl Position von oben */
- }
-</style>
-<style type="text/css">
- body{
-  background-image: url(http://www.muc-bau.de/gfx/Hintergrundframesunterseiten.png);   /* Adresse des Hintergrundbildes */
-  background-repeat: no-repeat;   /* Hintergrundbild ohne Wiederholung */
-  background-position: 400pt  100pt;
-  /* Erste Zahl Position von Links.  Zweite Zahl Position von oben */
- }
-</style>
-<body bgcolor="#000000" link="#FFFFFF" vlink="#FFFFFF" alink="#AF2828">
-<div align="left"> 
-  <table width="100%" height="98%" border="0" align="center">
-    <tr> 
-      <td align="left" valign="top"> 
-        <div align="left"></div>
-        <div align="center">
-          <table width="1200" border="0" align="center" cellpadding="0" cellspacing="0" bordercolor="#111111" style="border-collapse: collapse">
-            <tr valign="top"> 
-              <td width="403" height="211" valign="middle"> 
-                <p align="left"><strong><font color="#FFFFFF" size="3"><br>
-                  <img src="assets/logo.png" width="242" height="192" align="middle"> 
-                  </font></strong></p>
-              <td width="797" valign="top"> <div id="myslidemenu" class="jqueryslidemenu"> 
-                <ul>
-                  <a class="logo" href="https://www.aktionsolarstrom.de/" aria-label="Zur Startseite">
-                 <li><a href="http://www.aktionsolarstrom.de"><font face="Century Gothic">Home</font></a></li>
-                  <li><font face="Century Gothic"><br>
-                    </font></li>
-                </ul></tr>
-          </table>
-          <table width="1200" height="70%" border="0" align="center">
-            <tr valign="bottom"> 
-              <td width="397" height="874" align="left" valign="top"> 
-                <div align="left"> 
-                  <p>&nbsp;<strong> </strong></p>
-                  <p><strong></strong></p>
-                </div>
-                </td>
-              <td width="462" align="right" valign="top"> <p align="left"><font color="#FFFFFF" face="Century Gothic"><strong><br>
-                  </strong>Media International Bader - Impressum</font><font color="#FFFFFF" face="Century Gothic"><br>
-                  <br>
-                  Anbieter:<br>
-                  M.I.B. - Hans Leo Bader<br>
-                  <br>
-                  Gesch&auml;ftsf&uuml;hrer:<br>
-                  Hans Leo Bader<br>
-                  <br>
-                  Verantwortlich f&uuml;r diese Seiten und deren Inhalt im Sinne 
-                  des &sect; 6 TDG / &sect; 6 MDStV:<br>
-                  Hans Leo Bader<br>
-                  Heisenbergstr. 2b<br>
-                  80937 M&uuml;nchen<br>
-                  Telefon: +49 (89) 33 04 05 06<br>
-                  Telefon: +49 (177) 76 06 66 0<br>
-                  email: webmaster(at)muc-mib.de<br>
-                  <br>
-                  <br>
-                  <font color="#af2828"><strong>Haftung f&uuml;r Inhalte</strong></font><br>
-                  Die Inhalte unserer Seiten wurden mit gr&ouml;&szlig;ter Sorgfalt 
-                  erstellt. F&uuml;r die Richtigkeit, Vollst&auml;ndigkeit und 
-                  Aktualit&auml;t der Inhalte k&ouml;nnen wir jedoch keine Gew&auml;hr 
-                  &uuml;bernehmen.<br>
-                  Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 6 Abs.1 
-                  MDStV und &sect; 8 Abs.1 TDG f&uuml;r eigene Inhalte auf diesen 
-                  Seiten nach den allgemeinen Gesetzen verantwortlich. Diensteanbieter 
-                  sind jedoch nicht verpflichtet, die von ihnen &uuml;bermittelten 
-                  oder gespeicherten fremden Informationen zu &uuml;berwachen 
-                  oder nach Umst&auml;nden zu forschen, die auf eine rechtswidrige 
-                  T&auml;tigkeit hinweisen. Verpflichtungen zur Entfernung oder 
-                  Sperrung der Nutzung von Informationen nach den allgemeinen 
-                  Gesetzen bleiben hiervon unber&uuml;hrt. Eine diesbez&uuml;gliche 
-                  Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer 
-                  konkreten Rechtsverletzung m&ouml;glich. Bei bekannt werden 
-                  von entsprechenden Rechtsverletzungen werden wir diese Inhalte 
-                  umgehend entfernen.<br>
-                  <br>
-                  <font color="#af2828"><strong>Haftung f&uuml;r Links</strong></font><br>
-                  Unser Angebot enth&auml;lt Links zu externen Webseiten Dritter, 
-                  auf deren Inhalte wir keinen Einfluss haben. Deshalb k&ouml;nnen 
-                  wir f&uuml;r diese fremden Inhalte auch keine Gew&auml;hr &uuml;bernehmen. 
-                  F&uuml;r die Inhalte der verlinkten Seiten ist stets der jeweilige 
-                  Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten 
-                  Seiten wurden zum Zeitpunkt der Verlinkung auf m&ouml;gliche 
-                  Rechtsverst&ouml;&szlig;e &uuml;berpr&uuml;ft. Rechtswidrige 
-                  Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. 
-                  Eine permanente inhaltliche Kontrolle der verlinkten Seiten 
-                  ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung 
-                  nicht zumutbar. Bei bekannt werden von Rechtsverletzungen werden 
-                  wir derartige Links umgehend entfernen.</font></p>
-                </td>
-              <td width="327" align="right" valign="top"> 
-                <div align="center"> 
-                  <p align="right">&nbsp;</p>
-                  </div></td>
-            </tr>
-          </table>
-          <br>
-          <font color="#FFFFFF">M.I.B. - Werbe-, Event- und Anzeigenagentur - 
-          Heisenbergstrasse 2b - 80937 M&uuml;nchen - Telefon: +49 89 311 52 00 
-          - email:webmaster(at)muc-mib.de</font> </div></td>
-    </tr>
-  </table>
-  
-</div>
+        <p>
+          <strong>Anbieter:</strong><br>
+          M.I.B. – Hans Leo Bader
+        </p>
+
+        <p>
+          <strong>Geschäftsführer:</strong><br>
+          Hans Leo Bader
+        </p>
+
+        <p>
+          <strong>Verantwortlich für diese Seiten und deren Inhalt im Sinne des § 6 TDG / § 6 MDStV:</strong><br>
+          Hans Leo Bader<br>
+          Heisenbergstr. 2b<br>
+          80937 München<br>
+          Telefon: +49 (89) 33 04 05 06<br>
+          Telefon: +49 (177) 76 06 66 0<br>
+          E-Mail: webmaster(at)muc-mib.de
+        </p>
+
+        <h2>Haftung für Inhalte</h2>
+        <p>
+          Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und
+          Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 6 Abs. 1
+          MDStV und § 8 Abs. 1 TDG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich.
+          Diensteanbieter sind jedoch nicht verpflichtet, die von ihnen übermittelten oder gespeicherten fremden
+          Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
+          Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben
+          hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten
+          Rechtsverletzung möglich. Bei Bekanntwerden entsprechender Rechtsverletzungen werden wir diese Inhalte umgehend
+          entfernen.
+        </p>
+
+        <h2>Haftung für Links</h2>
+        <p>
+          Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben.
+          Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten
+          ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum
+          Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft; rechtswidrige Inhalte waren zu diesem Zeitpunkt
+          nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte
+          einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links
+          umgehend entfernen.
+        </p>
+      </section>
+    </main>
+
+    <footer class="middle">
+      <p>
+        <a href="https://www.aktionsolarstrom.de/">Zur Startseite</a>
+        · <a href="Datenschutz.html">Datenschutz</a>
+      </p>
+      <p class="muted">© Media International Bader</p>
+    </footer>
+  </div>
 </body>
 </html>
+
+
 
 
 
